commit (contact & index)

--- a/portfolio1/templates/portfolio1/contact.html
+++ b/portfolio1/templates/portfolio1/contact.html
@@ -6,13 +6,13 @@
 <div class="card rounded border border-light p-3 col-md-5 shadow-sm">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href=""><i class="fab fa-linkedin"></i> Linkedin </a>
+            <a class="nav-link" href="https://www.linkedin.com/in/madhur-pandey-ba5255241/"><i class="fab fa-linkedin"></i> Linkedin </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href=""><i class="fab fa-instagram"></i> Instagram </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""><i class="fab fa-github"></i> Github </a>
+            <a class="nav-link" href="https://github.com/Madhur6"><i class="fab fa-github"></i> Github </a>
         </li>
     </ul>
 </div>
