--- a/portfolio1/templates/portfolio1/index.html
+++ b/portfolio1/templates/portfolio1/index.html
@@ -11,7 +11,7 @@
 
 <section class="home" style="background-image: url('{{ MEDIA_URL }}media/background.jpg'); background-size: cover; background-position: center;">
     <div class="home-content card p-3 shadow">
-        <h2 style="font-family:Amatic sc; font-size: 3em; font-weight: bold;">Hi! I am <span id="green">M</span>adhur<span id="blue">.</span></h2>
+        <h2 style="font-family:Amatic sc; font-size: 3em; font-weight: bold;">Hi! I am <span id="green">M</span>adhur<span id="blue">.</span> <a href="https://github.com/Madhur6"><i class="fab fa-github-square"></i> </a></h2>
         <hr>
         <h3 style="font-family: 'Roboto', sans-serif; font-size: 1.5em;">&laquo; Software Developer &raquo;</h3>
         <p style="line-height: 1.6;">Welcome to my digital realm! <br> I'm Madhur, a passionate software developer dedicated to crafting elegant and efficient solutions.<br> From coding web applications to creating seamless user experiences, I thrive on turning ideas into reality. <br>Let's embark on a journey of innovation and excellence!</p>
